Refactor dei metodi DAO (Data Access Layer) e delle classi main